--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrator",
     "Password": "Passwort",
     "DeleteImage": "Bild l\u00f6schen",
-    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
-    "MessagePleaseSupportProject": "Please support Emby.",
+    "MessageThankYouForSupporting": "Vielen Dank das Sie Emby unterst\u00fctzen.",
+    "MessagePleaseSupportProject": "Bitte unterst\u00fctzen Sie Emby.",
     "DeleteImageConfirmation": "M\u00f6chtest du dieses Bild wirklich l\u00f6schen?",
     "FileReadCancelled": "Dateiimport wurde abgebrochen.",
     "FileNotFound": "Datei nicht gefunden",
@@ -35,9 +35,11 @@
     "HeaderConfirmation": "Best\u00e4tigung",
     "MessageKeyUpdated": "Danke. Dein Unterst\u00fctzerschl\u00fcssel wurde aktualisiert.",
     "MessageKeyRemoved": "Danke. Ihr Unterst\u00fctzerschl\u00fcssel wurde entfernt.",
+    "TitleLiveTV": "Live-TV",
+    "TitleSync": "Synchronisation",
     "ErrorLaunchingChromecast": "W\u00e4hrend des startens von Chromecast ist ein Fehler aufgetreten. Bitte stelle sicher, dass dein Ger\u00e4te mit dem WLAN verbunden ist.",
     "MessageErrorLoadingSupporterInfo": "Es trat ein Fehler beim laden der Unterst\u00fctzer-Informationen auf. Bitte versuchen Sie es sp\u00e4ter erneut.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Verbinden Sie Ihren Unterst\u00fctzer-Schl\u00fcssel mit bis zu {0} Emby Connect Benutzern um kostenfreien Zugriff auf die folgenden Apps zu erhalten:",
     "HeaderConfirmRemoveUser": "Entferne Benutzer",
     "MessageSwipeDownOnRemoteControl": "Willkommen zur Fernsteuerung. Streichen Sie irgendwo auf dem Bildschirm nach unten um dorthin zur\u00fcck zu gehen, von wo aus Sie kamen.",
     "MessageConfirmRemoveConnectSupporter": "M\u00f6chten Sie wirklich zus\u00e4tzliche Unterst\u00fctzer-Features von diesem Anwender entfernen?",
@@ -89,11 +91,10 @@
     "ConfirmMessageScheduledTaskButton": "Diese Aufgabe l\u00e4uft normalerweise automatisch als geplante Aufgabe. Sie kann jedoch auch manuell von hier gestartet werden. F\u00fcr Einstellungen der geplanten Aufgaben schauen Sie hier:",
     "HeaderSupporterBenefit": "Eine Unterst\u00fctzer-Mitgliedschaft bietet weitere Funktionen wie z.B. Zugriff auf die Synchronisation, Premium-Plugins, Internet Kan\u00e4le und mehr. {0}Erfahren Sie mehr{1}.",
     "LabelSyncNoTargetsHelp": "Es sieht so aus als w\u00fcrden Sie aktuell keine Apps verwenden, die Synchronisation unterst\u00fctzen.",
-    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
-    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
+    "HeaderWelcomeToProjectServerDashboard": "Willkommen zur Emby Server \u00dcbersicht",
+    "HeaderWelcomeToProjectWebClient": "Willkommen im Emby Web-Client",
     "ButtonTakeTheTour": "Mache die Tour",
     "HeaderWelcomeBack": "Willkommen zur\u00fcck!",
-    "TitleSync": "Synchronisation",
     "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Gehen Sie auf Erkundung und erfahren Sie was neu ist",
     "MessageNoSyncJobsFound": "Keine Synchronisierungs-Aufgaben gefunden. Um Synchronisierungs-Aufgaben zu erstellen verwenden Sie die dazugeh\u00f6rige Funktion im Web-Interface.",
@@ -119,6 +120,7 @@
     "MessagePlaybackErrorNotAllowed": "Sie sind nicht befugt diese Inhalte wiederzugeben. Bitte kontaktieren Sie Ihren Systemadministrator f\u00fcr weitere Details.",
     "MessagePlaybackErrorNoCompatibleStream": "Es sind aktuell keine kompatiblen Streams verf\u00fcgbar. Bitte versuchen Sie es sp\u00e4ter erneut.",
     "MessagePlaybackErrorRateLimitExceeded": "Ihr Wiedergabelimit wurde \u00fcberschritten. Bitte kontaktieren Sie Ihren Systemadministrator f\u00fcr weitere Details.",
+    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
     "HeaderSelectAudio": "W\u00e4hle Audio",
     "HeaderSelectSubtitles": "W\u00f6hle Untertitel",
     "ButtonMarkForRemoval": "Entferne von Ger\u00e4t",
@@ -192,7 +194,7 @@
     "MessagePleaseSelectOneItem": "Bitte w\u00e4hle mindestens eine Option aus.",
     "MessagePleaseSelectTwoItems": "Bitte w\u00e4hle mindestens zwei Optionen aus.",
     "MessageTheFollowingItemsWillBeGrouped": "Die folgenden Titel werden zu einem Element gruppiert:",
-    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
+    "MessageConfirmItemGrouping": "Emby Anwendungen w\u00e4hlen automatisch die beste Version anhand des Ger\u00e4tes und der Netzwerkgeschwindigkeit. Sind Sie sich sicher?",
     "HeaderResume": "Fortsetzen",
     "HeaderMyViews": "Meine Ansichten",
     "HeaderLibraryFolders": "Medienverzeichnisse",
@@ -240,8 +242,8 @@
     "OrganizePatternResult": "Ergebnis: {0}",
     "HeaderRestart": "Neustart",
     "HeaderShutdown": "Herunterfahren",
-    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
-    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
+    "MessageConfirmRestart": "M\u00f6chten Sie Emby Server wirklich neu starten?",
+    "MessageConfirmShutdown": "M\u00f6chsten Sie Emby Server wirklich beenden?",
     "ButtonUpdateNow": "Jetzt aktualisieren",
     "ValueItemCount": "{0} Eintrag",
     "ValueItemCountPlural": "{0} Eintr\u00e4ge",
@@ -310,7 +312,7 @@
     "OptionBlockLiveTvChannels": "Live-TV Kan\u00e4le",
     "OptionBlockChannelContent": "Internet Channelinhalte",
     "ButtonRevoke": "Zur\u00fccknehmen",
-    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
+    "MessageConfirmRevokeApiKey": "M\u00f6chten Sie diesen API Schl\u00fcssel wirklich l\u00f6schen? Die Verbindung der Anwendung zum Emby Server wird sofort unterbrochen.",
     "HeaderConfirmRevokeApiKey": "Nehme API Schl\u00fcssel zur\u00fcck",
     "ValueContainer": "Container: {0}",
     "ValueAudioCodec": "Audio Codec: {0}",
@@ -524,17 +526,17 @@
     "MessageInstallPluginFromApp": "Dieses Plugin muss von der App aus installiert werden, mit der du es benutzen willst.",
     "ValuePriceUSD": "Preis: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Du bist f\u00fcr diese Funktion registriert und kannst diese durch eine aktive Unterst\u00fctzer Mitgliedschaft weiterhin nutzen.",
-    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
+    "MessageChangeRecurringPlanConfirm": "Nach vollendeter Bezahlung m\u00fcssen Sie Ihre zuvor gemachten Dauer-Spenden in Ihrem PayPal Konto beenden. Vielen Dank das Sie Emby unterst\u00fctzen.",
     "MessageSupporterMembershipExpiredOn": "Deine Unterst\u00fctzer Mitgliedschaft endet am {0}.",
-    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
+    "MessageYouHaveALifetimeMembership": "Sie besitzen eine lebenslange Unterst\u00fctzer-Mitgliedschaft. Sie k\u00f6nnen zus\u00e4tzliche Spenden als Einmal-Zahlung oder als wiederkehrende Zahlungen t\u00e4tigen. Vielen Dank das Sie Emby unterst\u00fctzen.",
     "MessageYouHaveAnActiveRecurringMembership": "Du hast eine aktive {0} Mitgliedschaft. Du kannst deine Mitgliedschaft durch folgende Optionen aufwerten.",
     "ButtonDelete": "L\u00f6schen",
-    "HeaderEmbyAccountAdded": "Emby Account Added",
-    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
-    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
-    "HeaderEmbyAccountRemoved": "Emby Account Removed",
-    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
-    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderEmbyAccountAdded": "Emby Konto hinzugef\u00fcgt",
+    "MessageEmbyAccountAdded": "Das Emby Konto wurde diesem Benutzer hinzugef\u00fcgt.",
+    "MessagePendingEmbyAccountAdded": "Das Emby Konto wurde diesem Benutzer hinzugef\u00fcgt. Eine Emails wird an den Besitzer dieses Kontos gesendet. Die Einladung muss mit einem Klick auf den Link in der Email best\u00e4tigt werden.",
+    "HeaderEmbyAccountRemoved": "Emby Konto entfernt",
+    "MessageEmbyAccontRemoved": "Das Emby Konto wurde von diesem Benutzer entfernt.",
+    "TooltipLinkedToEmbyConnect": "Verbunden mit Emby Connect",
     "HeaderUnrated": "Nicht bewertet",
     "ValueDiscNumber": "Disc {0}",
     "HeaderUnknownDate": "Unbekanntes Datum",
@@ -664,12 +666,12 @@
     "WebClientTourMetadataManager": "Klicke auf \"Bearbeiten\" um den Metadaten-Manager zu \u00f6ffnen",
     "WebClientTourPlaylists": "Erstelle einfach Wiedergabelisten und Schnellmixe und spiele diese auf jedem Ger\u00e4t",
     "WebClientTourCollections": "Erstelle Film Sammlungen um Box-Sets zusammenzuf\u00fchren",
-    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
-    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
+    "WebClientTourUserPreferences1": "Benutzereinstellungen erlauben die personalisierte Darstellung Ihrer Bibliothek in all unseren Emby Apps.",
+    "WebClientTourUserPreferences2": "Legen Sie die Sprachen f\u00fcr Audio und Untertitel einmalig f\u00fcr alle Emby Apps fest.",
     "WebClientTourUserPreferences3": "Designe die Web-Client-Homepage nach deinen W\u00fcnschen",
     "WebClientTourUserPreferences4": "Konfiguriere Hintergr\u00fcnde, Titelsongs und externe Abspieler",
     "WebClientTourMobile1": "Der Web-Client funktioniert hervorragend auf Smartphones und Tablets ...",
-    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
+    "WebClientTourMobile2": "und steuern Sie auf einfache Weise andere Ger\u00e4te und Emby Apps",
     "WebClientTourMySync": "Synchronisieren Sie pers\u00f6nliche Medien mit Ihren Ger\u00e4ten um diese offline anzuschauen.",
     "MessageEnjoyYourStay": "Genie\u00dfe deinen Aufenthalt",
     "DashboardTourDashboard": "Die Server\u00fcbersicht erlaubt es dir deinen Server und dessen Benutzer im Blick zu behalten. Somit wei\u00dft du immer wer gerade was macht und wo er sich befindet.",
@@ -681,7 +683,7 @@
     "DashboardTourPlugins": "Installiere Plugins wie Internet Videoportale, Live-TV, Metadatenscanner und mehr.",
     "DashboardTourNotifications": "Sende automatisch Benachrichtigungen von Serverereignissen auf dein mobiles Endger\u00e4t, per E-Mail und mehr.",
     "DashboardTourScheduledTasks": "Verwalte einfach lang dauernde Aufgaben mit Hilfe von geplanten Aufgaben. Entscheide wann diese ausgef\u00fchrt werden und wie oft.",
-    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
+    "DashboardTourMobile": "Die Emby Server Startseite funktioniert super auf Smartphones oder Tabletts. Kontrollieren Sie Ihren Server zu jeder Zeit, egal wo.",
     "DashboardTourSync": "Synchronisieren Sie pers\u00f6nliche Medien mit Ihren Ger\u00e4ten um diese offline anzuschauen.",
     "MessageRefreshQueued": "Warteschlange aktualisieren",
     "TabDevices": "Ger\u00e4te",
@@ -691,13 +693,13 @@
     "DeleteDeviceConfirmation": "Bist du dir sicher dieses Ger\u00e4t l\u00f6schen zu wollen? Es wird wieder angezeigt werden, sobald sich ein Uder dar\u00fcber einloggt.",
     "LabelEnableCameraUploadFor": "Aktiviere den Kamera-Upload f\u00fcr:",
     "HeaderSelectUploadPath": "W\u00e4hle Upload Pfad",
-    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
+    "LabelEnableCameraUploadForHelp": "Uploads erscheinen automatisch im Hintergrund wenn Sie mit Emby verbunden sind.",
     "ErrorMessageStartHourGreaterThanEnd": "Die Endzeit muss gr\u00f6\u00dfer als die Startzeit sein.",
     "ButtonLibraryAccess": "Bibliothekszugang",
     "ButtonParentalControl": "Kindersicherung",
     "HeaderInvitationSent": "Einladung verschickt",
     "MessageInvitationSentToUser": "Eine E-Mail mit der Einladung zum Sharing ist an {0} geschickt worden.",
-    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
+    "MessageInvitationSentToNewUser": "Eine Email wurde an {0} mit einer Einladung zur Anmeldung an Emby gesendet.",
     "HeaderConnectionFailure": "Verbindungsfehler",
     "MessageUnableToConnectToServer": "Wir k\u00f6nnen gerade keine Verbindung zum gew\u00e4hlten Server herstellen. Bitte stellen Sie sicher das dieser l\u00e4uft und versuchen Sie es erneut.",
     "ButtonSelectServer": "W\u00e4hle Server",
@@ -714,8 +716,8 @@
     "MessageInvalidForgotPasswordPin": "Ein ung\u00fcltiger oder abgelaufener PIN wurde eingegeben. Bitte versuche es noch einmal.",
     "MessagePasswordResetForUsers": "Passw\u00f6rter der folgenden Benutzer wurden entfernt:",
     "HeaderInviteGuest": "Lade G\u00e4ste ein",
-    "ButtonLinkMyEmbyAccount": "Link my account now",
-    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
+    "ButtonLinkMyEmbyAccount": "Verbinde mein Konto jetzt",
+    "MessageConnectAccountRequiredToInviteGuest": "Um G\u00e4ste einladen zu k\u00f6nnen, m\u00fcssen Sie erst Ihr Emby Konto mit diesem Server verbinden.",
     "ButtonSync": "Synchronisieren",
     "SyncMedia": "Synchronisiere Medien",
     "HeaderCancelSyncJob": "Synchronisierung abbrechen",
