--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -35,6 +35,8 @@
     "HeaderConfirmation": "Confirmaci\u00f3n",
     "MessageKeyUpdated": "Gracias. Su clave de aficionado ha sido actualizada.",
     "MessageKeyRemoved": "Gracias. Su clave de aficionado ha sido eliminada.",
+    "TitleLiveTV": "TV en Vivo",
+    "TitleSync": "Sinc",
     "ErrorLaunchingChromecast": "Hubo un error iniciando chromecast. Por favor aseg\u00farate de que tu dispositivo este conectado a tu red inalambrica",
     "MessageErrorLoadingSupporterInfo": "Se present\u00f3 un error al cargar la informaci\u00f3n del aficionado. Por favor int\u00e9ntelo m\u00e1s tarde.",
     "MessageLinkYourSupporterKey": "Enlaza tu clave de aficionado con hasta {0} miembros de Emby Connect para disfrutar de acceso gratuito a la siguientes aplicaciones:",
@@ -93,7 +95,6 @@
     "HeaderWelcomeToProjectWebClient": "Bienvenido al Cliente Web de Emby",
     "ButtonTakeTheTour": "Haga el recorrido",
     "HeaderWelcomeBack": "\u00a1Bienvenido nuevamente!",
-    "TitleSync": "Sinc",
     "TitlePlugins": "Complementos",
     "ButtonTakeTheTourToSeeWhatsNew": "Inice el tour para ver que hay de nuevo",
     "MessageNoSyncJobsFound": "No se han encontrado trabajos de sincronizaci\u00f3n. Cree trabajos de sincronizaci\u00f3n empleando los botones de Sinc que se encuentran en la intergface web.",
@@ -119,6 +120,7 @@
     "MessagePlaybackErrorNotAllowed": "Actualmente no esta autorizado para reproducir este contenido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
     "MessagePlaybackErrorNoCompatibleStream": "No hay streams compatibles en este en este momento. Por favor intente de nuevo mas tarde.",
     "MessagePlaybackErrorRateLimitExceeded": "Su limite de transferencia ha sido excedido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
+    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
     "HeaderSelectAudio": "Seleccionar Audio",
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Remover de dispositivo",
@@ -192,7 +194,7 @@
     "MessagePleaseSelectOneItem": "Por favor selecciona al menos un elemento.",
     "MessagePleaseSelectTwoItems": "Por favor selecciona al menos dos elementos.",
     "MessageTheFollowingItemsWillBeGrouped": "Los siguientes t\u00edtulos ser\u00e1n agrupados en un solo elemento.",
-    "MessageConfirmItemGrouping": "La aplicaciones Emby eligira autom\u00e1ticamente la versi\u00f3n optima para reproducir basado en el dispositivo y rendimiento de red. \u00bfEsta seguro de que desea continuar?",
+    "MessageConfirmItemGrouping": "Las aplicaciones Emby eligiran autom\u00e1ticamente la versi\u00f3n optima para reproducir basado en el dispositivo y rendimiento de red. \u00bfEsta seguro de que desea continuar?",
     "HeaderResume": "Continuar",
     "HeaderMyViews": "Mis Vistas",
     "HeaderLibraryFolders": "Carpetas de Medios",
@@ -210,12 +212,12 @@
     "HeaderSelectTranscodingPath": "Seleccionar Ruta para Transcodificaci\u00f3n Temporal",
     "HeaderSelectImagesByNamePath": "Seleccionar Ruta para Im\u00e1genes por Nombre",
     "HeaderSelectMetadataPath": "Seleccionar Ruta para Metadatos",
-    "HeaderSelectServerCachePathHelp": "Explore o capture la ruta a utilizar para los archivos del cach\u00e9 del servidor. La carpeta debe tener permisos de escritura.",
-    "HeaderSelectTranscodingPathHelp": "Explore o capture la ruta a utilizar para los archivos temporales de transcodificaci\u00f3n. La carpeta debe tener permisos de escritura.",
-    "HeaderSelectImagesByNamePathHelp": "Explore o capture la ruta a utilizar para la carpeta de im\u00e1genes por nombre. La carpeta debe tener permisos de escritura.",
-    "HeaderSelectMetadataPathHelp": "Explore o capture la ruta donde desea almacenar los metadatos. La carpeta debe tener permisos de escritura.",
+    "HeaderSelectServerCachePathHelp": "Explore o introduzca la ruta a utilizar para los archivos del cach\u00e9 del servidor. La carpeta debe tener permisos de escritura.",
+    "HeaderSelectTranscodingPathHelp": "Explore o introduzca la ruta a utilizar para los archivos temporales de transcodificaci\u00f3n. La carpeta debe tener permisos de escritura.",
+    "HeaderSelectImagesByNamePathHelp": "Explore o introduzca la ruta a utilizar para la carpeta de im\u00e1genes por nombre. La carpeta debe tener permisos de escritura.",
+    "HeaderSelectMetadataPathHelp": "Explore o introduzca la ruta donde desea almacenar los metadatos. La carpeta debe tener permisos de escritura.",
     "HeaderSelectChannelDownloadPath": "Selecciona una ruta para la descarga del canal",
-    "HeaderSelectChannelDownloadPathHelp": "Navega o entra en la ruta usada para almacenar los archivos temporales del canal. La carpeta debe tener permisos de escritura.",
+    "HeaderSelectChannelDownloadPathHelp": "Explore o introduzca la ruta usada para almacenar los archivos temporales del canal. La carpeta debe tener permisos de escritura.",
     "OptionNewCollection": "Nuevo...",
     "ButtonAdd": "Agregar",
     "ButtonRemove": "Eliminar",
@@ -236,12 +238,12 @@
     "MessageFollowingFileWillBeMovedFrom": "El siguiente archivo sera movido de:",
     "MessageDestinationTo": "a:",
     "HeaderSelectWatchFolder": "Elegir Carpeta Monitoreada",
-    "HeaderSelectWatchFolderHelp": "Navega o introduce la ruta hacia tu carpeta monitoreada. La carpeta debe tener permisos de escritura.",
+    "HeaderSelectWatchFolderHelp": "Explore o introduzca la ruta para la carpeta para monitorear. La carpeta debe tener permisos de escritura.",
     "OrganizePatternResult": "Resultado: {0}",
     "HeaderRestart": "Reiniciar",
     "HeaderShutdown": "Apagar",
     "MessageConfirmRestart": "\u00bfEsta seguro de que desea reiniciar el Servidor Emby?",
-    "MessageConfirmShutdown": "\u00bfEsta seguro de que desea apagar el Servidor Emby?",
+    "MessageConfirmShutdown": "\u00bfEsta seguro de que desea detener el Servidor Emby?",
     "ButtonUpdateNow": "Actualizar Ahora",
     "ValueItemCount": "{0} \u00edtem",
     "ValueItemCountPlural": "{0} \u00edtems",
@@ -271,7 +273,7 @@
     "HeaderSelectMediaPath": "Seleccionar ruta a medios",
     "HeaderSelectPath": "Seleccionar Trayectoria",
     "ButtonNetwork": "Red",
-    "MessageDirectoryPickerInstruction": "Las rutas de red pueden ser ingresadas manualmente en caso de que el bot\u00f3n de Red no pueda localizar sus dispositivos. Por ejemplo, {0} or {1}.",
+    "MessageDirectoryPickerInstruction": "Las rutas de red pueden ser introducidas manualmente en caso de que el bot\u00f3n de Red no pueda localizar sus dispositivos. Por ejemplo, {0} or {1}.",
     "HeaderMenu": "Men\u00fa",
     "ButtonOpen": "Abrir",
     "ButtonOpenInNewTab": "Abrir en una pesta\u00f1a nueva",
@@ -310,7 +312,7 @@
     "OptionBlockLiveTvChannels": "Canales de TV en Vivo",
     "OptionBlockChannelContent": "Contenido de Canales de Internet",
     "ButtonRevoke": "Revocar",
-    "MessageConfirmRevokeApiKey": "\u00bfEsta seguro de que desea revocar esta clave api? La conexi\u00f3n de la aplicaci\u00f3n a Emby sera terminada abruptamente.",
+    "MessageConfirmRevokeApiKey": "\u00bfEsta seguro de que desea revocar esta clave api? La conexi\u00f3n de la aplicaci\u00f3n con el Servidor Emby sera terminada abruptamente.",
     "HeaderConfirmRevokeApiKey": "Revocar llave de API",
     "ValueContainer": "Contenedor: {0}",
     "ValueAudioCodec": "C\u00f3dec de Audio: {0}",
@@ -328,8 +330,8 @@
     "ButtonBrowseOnlineImages": "Buscar im\u00e1genes en l\u00ednea",
     "HeaderDeleteItem": "Eliminar \u00cdtem",
     "ConfirmDeleteItem": "Al eliminar este \u00edtem se eliminar\u00e1 tanto del sistema de archivos como de su biblioteca de medios. \u00bfEsta seguro de querer continuar?",
-    "MessagePleaseEnterNameOrId": "Por favor ingrese un nombre o id externo.",
-    "MessageValueNotCorrect": "El valor ingresado no es correcto. Intente nuevamente por favor.",
+    "MessagePleaseEnterNameOrId": "Por favor introduzca un nombre o id externo.",
+    "MessageValueNotCorrect": "El valor introducido no es correcto. Intente nuevamente por favor.",
     "MessageItemSaved": "\u00cdtem guardado.",
     "MessagePleaseAcceptTermsOfServiceBeforeContinuing": "Por favor acepte los t\u00e9rminos del servicio antes de continuar.",
     "OptionEnded": "Finalizado",
@@ -442,7 +444,7 @@
     "OptionGames": "Juegos",
     "OptionGameSystems": "Sistemas de juegos",
     "OptionMusicArtists": "Int\u00e9rpretes",
-    "OptionMusicAlbums": "\u00c1lbums musicales",
+    "OptionMusicAlbums": "\u00c1lbumes musicales",
     "OptionMusicVideos": "Videos musicales",
     "OptionSongs": "Canciones",
     "OptionHomeVideos": "Videos caseros",
@@ -508,7 +510,7 @@
     "TabEpisodes": "Episodios",
     "TabTrailers": "Avances",
     "TabGames": "Juegos",
-    "TabAlbums": "\u00c1lbums",
+    "TabAlbums": "\u00c1lbumes",
     "TabSongs": "Canciones",
     "TabMusicVideos": "Videos Musicales",
     "BirthPlaceValue": "Lugar de nacimiento: {0}",
@@ -524,7 +526,7 @@
     "MessageInstallPluginFromApp": "El complemento debe estar instalado desde la aplicaci\u00f3n en la que va a utilizarlo.",
     "ValuePriceUSD": "Precio: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Se encuentra registrado para esta caracter\u00edstica, y podr\u00e1 continuar us\u00e1ndola con una membres\u00eda de aficionado activa.",
-    "MessageChangeRecurringPlanConfirm": "Despu\u00e9s de completar esta transacci\u00f3n necesitara cancelar su donaci\u00f3n recurrente previa desde su cuenta PayPal. Gracias por apoyar Emby",
+    "MessageChangeRecurringPlanConfirm": "Despu\u00e9s de completar esta transacci\u00f3n necesitar\u00e1 cancelar su donaci\u00f3n recurrente previa desde su cuenta PayPal. Gracias por apoyar Emby.",
     "MessageSupporterMembershipExpiredOn": "Su membres\u00eda de aficionado expir\u00f3 en {0}.",
     "MessageYouHaveALifetimeMembership": "Usted cuenta con una membres\u00eda de aficionado vitalicia. Puede realizar donaciones adicionales individuales o recurrentes usando las opciones siguientes. Gracias por apoyar a Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Usted cuenta con membres\u00eda {0} activa. Puede mejorarla usando las opciones siguientes.",
@@ -561,7 +563,7 @@
     "ValueOneGame": "1 juego",
     "ValueGameCount": "{0} juegos",
     "ValueOneAlbum": "1 \u00e1lbum",
-    "ValueAlbumCount": "{0} \u00e1lbums",
+    "ValueAlbumCount": "{0} \u00e1lbumes",
     "ValueOneSong": "1 canci\u00f3n",
     "ValueSongCount": "{0} canciones",
     "ValueOneMusicVideo": "1 video musical",
@@ -606,7 +608,7 @@
     "HeaderIfYouLikeCheckTheseOut": "Si te gust\u00f3 {0}, prueba con...",
     "HeaderPlotKeywords": "Palabras clave de la Trama",
     "HeaderMovies": "Pel\u00edculas",
-    "HeaderAlbums": "\u00c1lbums",
+    "HeaderAlbums": "\u00c1lbumes",
     "HeaderGames": "Juegos",
     "HeaderBooks": "Libros",
     "HeaderEpisodes": "Episodios",
@@ -664,7 +666,7 @@
     "WebClientTourMetadataManager": "Haga clic en editar para abrir el administrador de metadatos",
     "WebClientTourPlaylists": "Cree f\u00e1cilmente listas de reproducci\u00f3n y mezclas instant\u00e1neas, y reprod\u00fazcalas en cualquier dispositivo",
     "WebClientTourCollections": "Cree colecciones de pel\u00edculas para agruparlas en sets de pel\u00edculas",
-    "WebClientTourUserPreferences1": "Las preferencias de usuario permiten personalizar la manera que que su biblioteca es mostrada en todas tus aplicaciones Emby.",
+    "WebClientTourUserPreferences1": "Las preferencias de usuario le permiten personalizar la manera que que su biblioteca es mostrada en todas tus aplicaciones Emby.",
     "WebClientTourUserPreferences2": "Configure sus preferencias de audio y subtitulos una vez, por cada aplicaci\u00f3n Emby.",
     "WebClientTourUserPreferences3": "Dise\u00f1e a su gusto la p\u00e1gina principal del cliente web",
     "WebClientTourUserPreferences4": "Configure im\u00e1genes de fondo, canciones de tema y reproductores externos",
@@ -681,7 +683,7 @@
     "DashboardTourPlugins": "Instale complementos como canales de video de Internet, TV en vivo, buscadores de metadatos y m\u00e1s.",
     "DashboardTourNotifications": "Env\u00ede notificaciones automatizadas de eventos del servidor a sus dispositivos m\u00f3viles, correo electr\u00f3nico y m\u00e1s.",
     "DashboardTourScheduledTasks": "Administre f\u00e1cilmente operaciones de larga duraci\u00f3n con tareas programadas. Decida cuando se ejecutar\u00e1n y con que periodicidad.",
-    "DashboardTourMobile": "El panel de control del Servidor Emby funciona genial en smartphones y tablets. Administra tu servidor desde la palma de tu mano en cualquier momento y en cualquier lugar.",
+    "DashboardTourMobile": "El panel de control del Servidor Emby funciona genial en smartphones y tablets. Administre su servidor desde la palma de su mano en cualquier momento y en cualquier lugar.",
     "DashboardTourSync": "Sincronice sus medios personales a sus dispositivos para reproducirlos fuera de l\u00ednea.",
     "MessageRefreshQueued": "Actualizaci\u00f3n programada",
     "TabDevices": "Dispositivos",
@@ -691,13 +693,13 @@
     "DeleteDeviceConfirmation": "\u00bfEst\u00e1 seguro de querer eliminar este dispositivo? Volver\u00e1 a aparecer la siguiente vez que un usuario inicie sesi\u00f3n en \u00e9l.",
     "LabelEnableCameraUploadFor": "Habilitar subir desde la c\u00e1mara para:",
     "HeaderSelectUploadPath": "Seleccionar ruta de subida",
-    "LabelEnableCameraUploadForHelp": "La transferencias ocurrir\u00e1n autom\u00e1ticamente en el fondo cuando acceda a Emby",
+    "LabelEnableCameraUploadForHelp": "La transferencias ocurrir\u00e1n autom\u00e1ticamente en segundo plano cuando haya iniciado sesi\u00f3n en Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "El horario de fin debe ser mayor al de comienzo.",
     "ButtonLibraryAccess": "Acceso a biblioteca",
     "ButtonParentalControl": "Control parental",
     "HeaderInvitationSent": "Invitaci\u00f3n Enviada",
     "MessageInvitationSentToUser": "Se ha enviado un correo electr\u00f3nico a {0}, invit\u00e1ndolo a aceptar tu invitaci\u00f3n para compartir.",
-    "MessageInvitationSentToNewUser": "Un correo electr\u00f3nico se ha enviado a {0} invit\u00e1ndolo a ingresar con Emby.",
+    "MessageInvitationSentToNewUser": "Un correo electr\u00f3nico se ha enviado a {0} invit\u00e1ndolos a registrarse en Emby.",
     "HeaderConnectionFailure": "Falla de Conexi\u00f3n",
     "MessageUnableToConnectToServer": "No es posible conectarse al servidor seleccionado en este momento. Por favor aseg\u00farese de que se encuentra en ejecuci\u00f3n e int\u00e9ntelo nuevamente.",
     "ButtonSelectServer": "Seleccionar servidor",
@@ -715,7 +717,7 @@
     "MessagePasswordResetForUsers": "Las contrase\u00f1as han sido eliminadas de los siguientes usuarios:",
     "HeaderInviteGuest": "Agregar un Invitado",
     "ButtonLinkMyEmbyAccount": "Enlazar mi cuenta ahora",
-    "MessageConnectAccountRequiredToInviteGuest": "Para poder enviar invitaciones necesita primero enlazar su cuenta Emby en este servidor.",
+    "MessageConnectAccountRequiredToInviteGuest": "Para poder enviar invitaciones necesita primero enlazar su cuenta Emby con este servidor.",
     "ButtonSync": "SInc",
     "SyncMedia": "Sincronizar Medios",
     "HeaderCancelSyncJob": "Cancelar Sinc.",
