--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -35,6 +35,8 @@
     "HeaderConfirmation": "Bekreftelse",
     "MessageKeyUpdated": "Takk. Din supportern\u00f8kkel har blitt oppdatert.",
     "MessageKeyRemoved": "Takk. Din supportern\u00f8kkel har blitt fjernet.",
+    "TitleLiveTV": "Live TV",
+    "TitleSync": "Synk",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -93,7 +95,6 @@
     "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Bli med p\u00e5 omvisning",
     "HeaderWelcomeBack": "Velkommen tilbake!",
-    "TitleSync": "Synk",
     "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Ta en titt p\u00e5 hva som er nytt",
     "MessageNoSyncJobsFound": "Ingen synkroniseringsjobber funnet. Opprett en synkroniseringsjobb ved hjelp av Synkroniseringsknappene i biblioteket",
@@ -119,6 +120,7 @@
     "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
     "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
     "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
+    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
     "HeaderSelectAudio": "Velg Lyd",
     "HeaderSelectSubtitles": "Velg Undertekst",
     "ButtonMarkForRemoval": "Fjern fra enheten.",
