--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -6,8 +6,8 @@
     "Administrator": "Beheerder",
     "Password": "Wachtwoord",
     "DeleteImage": "Verwijder afbeelding",
-    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
-    "MessagePleaseSupportProject": "Please support Emby.",
+    "MessageThankYouForSupporting": "Dank u voor uw steun aan Emby",
+    "MessagePleaseSupportProject": "Steun Emby a.u.b.",
     "DeleteImageConfirmation": "Weet u zeker dat u deze afbeelding wilt verwijderen?",
     "FileReadCancelled": "Bestand lezen is geannuleerd.",
     "FileNotFound": "Bestand niet gevonden.",
@@ -35,25 +35,27 @@
     "HeaderConfirmation": "Bevestiging",
     "MessageKeyUpdated": "Dank u. Uw supporter sleutel is bijgewerkt.",
     "MessageKeyRemoved": "Dank u. Uw supporter sleutel is verwijderd.",
+    "TitleLiveTV": "Live TV",
+    "TitleSync": "Synchroniseer",
     "ErrorLaunchingChromecast": "Er is een fout opgetreden bij het starten van chromecast. Zorg ervoor dat uw apparaat is aangesloten op uw draadloze netwerk.",
-    "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
-    "HeaderConfirmRemoveUser": "Remove User",
-    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
-    "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
+    "MessageErrorLoadingSupporterInfo": "Er is een fout opgetreden bij het laden van uw supporter informatie. Probeer het later opnieuw.",
+    "MessageLinkYourSupporterKey": "Koppel uw supporters sleutel met maximaal {0} Emby Connect leden om te genieten van gratis toegang tot de volgende apps:",
+    "HeaderConfirmRemoveUser": "Gebruiker verwijderen",
+    "MessageSwipeDownOnRemoteControl": "Welkom bij de bediening op afstand. Veeg naar beneden ergens in dit scherm om terug te gaan naar waar je vandaan komt.",
+    "MessageConfirmRemoveConnectSupporter": "Bent u zeker dat u de extra supporter voordelen van deze gebruiker wilt verwijderen?",
     "ValueTimeLimitSingleHour": "Tijdslimiet: 1 uur",
     "ValueTimeLimitMultiHour": "Tijdslimiet: {0} uren",
     "HeaderUsers": "Gebruikers",
-    "PluginCategoryGeneral": "General",
-    "PluginCategoryContentProvider": "Content Providers",
-    "PluginCategoryScreenSaver": "Screen Savers",
-    "PluginCategoryTheme": "Themes",
+    "PluginCategoryGeneral": "Algemeen",
+    "PluginCategoryContentProvider": "Inhouds Providers",
+    "PluginCategoryScreenSaver": "Scherm beveiligers",
+    "PluginCategoryTheme": "Thema's",
     "PluginCategorySync": "Sync",
-    "PluginCategorySocialIntegration": "Social Networks",
-    "PluginCategoryNotifications": "Notifications",
+    "PluginCategorySocialIntegration": "Sociale Netwerken",
+    "PluginCategoryNotifications": "Meldingen",
     "PluginCategoryMetadata": "Metadata",
     "PluginCategoryLiveTV": "Live TV",
-    "PluginCategoryChannel": "Channels",
+    "PluginCategoryChannel": "Kanalen",
     "HeaderSearch": "Zoeken",
     "ValueDateCreated": "Datum aangemaakt: {0}",
     "LabelArtist": "Artiest",
@@ -89,11 +91,10 @@
     "ConfirmMessageScheduledTaskButton": "Deze operatie loopt normaal gesproken automatisch als een geplande taak. Het kan hier ook handmatig worden uitgevoerd. Om de geplande taak te configureren, zie:",
     "HeaderSupporterBenefit": "Een supporter lidmaatschap biedt voordelen zoals toegang tot synchronisatie, premium plug-ins, internet kanalen en meer. {0}Meer weten{1}.",
     "LabelSyncNoTargetsHelp": "Het lijkt erop dat je momenteel geen apps hebt die synchroniseren ondersteunen.",
-    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
-    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
+    "HeaderWelcomeToProjectServerDashboard": "Welkom bij het Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welkom bij de Emby Web Client",
     "ButtonTakeTheTour": "Volg de tour",
     "HeaderWelcomeBack": "Welkom terug!",
-    "TitleSync": "Synchroniseer",
     "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Volg de tour om te zien wat nieuw is",
     "MessageNoSyncJobsFound": "Geen sync opdrachten gevonden. Maak sync opdrachten via de Synchronisatie knoppen in de web interface.",
@@ -115,10 +116,11 @@
     "LabelVersionInstalled": "{0} ge\u00efnstalleerd",
     "LabelNumberReviews": "{0} Recensies",
     "LabelFree": "Gratis",
-    "HeaderPlaybackError": "Playback Error",
-    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
-    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "HeaderPlaybackError": "Afspeel Fout",
+    "MessagePlaybackErrorNotAllowed": "U bent niet bevoegd om deze content af te spelen. Neem contact op met uw systeembeheerder voor meer informatie.",
+    "MessagePlaybackErrorNoCompatibleStream": "Geen compatibele streams beschikbaar. Probeer het later opnieuw.",
     "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
+    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
     "HeaderSelectAudio": "Selecteer Audio",
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
     "ButtonMarkForRemoval": "Van apparaat verwijderen",
@@ -192,7 +194,7 @@
     "MessagePleaseSelectOneItem": "Selecteer ten minste een item.",
     "MessagePleaseSelectTwoItems": "Selecteer ten minste twee items.",
     "MessageTheFollowingItemsWillBeGrouped": "De volgende titels worden gegroepeerd in \u00e9\u00e9n item:",
-    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
+    "MessageConfirmItemGrouping": "Emby apps zullen automatisch de optimale versie kiezen om afspelen op basis van het apparaat en de prestaties van het netwerk. Weet u zeker dat u door wilt gaan?",
     "HeaderResume": "Hervatten",
     "HeaderMyViews": "Mijn Overzichten",
     "HeaderLibraryFolders": "Media Mappen",
@@ -240,8 +242,8 @@
     "OrganizePatternResult": "Resultaat: {0}",
     "HeaderRestart": "Herstart",
     "HeaderShutdown": "Afsluiten",
-    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
-    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
+    "MessageConfirmRestart": "Weet u zeker dat u Emby Server wilt herstarten?",
+    "MessageConfirmShutdown": "Weet u zeker dat u Emby Server wilt afsluiten?",
     "ButtonUpdateNow": "Nu bijwerken",
     "ValueItemCount": "{0} item",
     "ValueItemCountPlural": "{0} items",
@@ -310,7 +312,7 @@
     "OptionBlockLiveTvChannels": "Live TV Kanalen",
     "OptionBlockChannelContent": "Internet kanaal Inhoud",
     "ButtonRevoke": "Herroepen",
-    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
+    "MessageConfirmRevokeApiKey": "Weet je zeker dat je deze api key in wilt trekken? De verbinding met Emby Server zal direct afgebroken worden.",
     "HeaderConfirmRevokeApiKey": "Intrekken Api Sleutel",
     "ValueContainer": "Container: {0}",
     "ValueAudioCodec": "Audio Codec: {0}",
@@ -529,12 +531,12 @@
     "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "U hebt een actief {0} lidmaatschap. U kunt met de opties hieronder uw lidmaatschap upgraden.",
     "ButtonDelete": "Verwijderen",
-    "HeaderEmbyAccountAdded": "Emby Account Added",
-    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
-    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
-    "HeaderEmbyAccountRemoved": "Emby Account Removed",
-    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
-    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Toegevoegd",
+    "MessageEmbyAccountAdded": "Het Emby account is aan deze gebruiker toegevoegd.",
+    "MessagePendingEmbyAccountAdded": "Het Emby account is aan deze gebruiker toegevoegd.Er wordt een emailbericht naar de eigenaar van het account gestuurd. De uitnodigind moet bevestigd worden door op de link in het emailbericht te klikken.",
+    "HeaderEmbyAccountRemoved": "Emby Account Verwijderd",
+    "MessageEmbyAccontRemoved": "Het Emby account is verwijderd van deze gebruiker.",
+    "TooltipLinkedToEmbyConnect": "Gekoppeld aan Emby Connect",
     "HeaderUnrated": "Geen rating",
     "ValueDiscNumber": "Disc {0}",
     "HeaderUnknownDate": "Onbekende datum",
@@ -697,7 +699,7 @@
     "ButtonParentalControl": "Ouderlijk toezicht",
     "HeaderInvitationSent": "Uitnodiging verzonden",
     "MessageInvitationSentToUser": "Een email is verzonden naar {0} om uw uitnodiging om media te delen te accepteren.",
-    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
+    "MessageInvitationSentToNewUser": "Een email is verzonden naar {0} met een uitnodiging om aan te melden bij Emby.",
     "HeaderConnectionFailure": "Verbindingsfout",
     "MessageUnableToConnectToServer": "Het is momenteel niet mogelijk met de geselecteerde server te verbinden. Controleer dat deze draait en probeer het opnieuw.",
     "ButtonSelectServer": "Selecteer server",
@@ -714,7 +716,7 @@
     "MessageInvalidForgotPasswordPin": "Er is een ongeldige of verlopen pincode ingegeven. Probeer opnieuw.",
     "MessagePasswordResetForUsers": "Wachtwoorden zijn verwijderd van de volgende gebruikers:",
     "HeaderInviteGuest": "Nodig gast uit",
-    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "ButtonLinkMyEmbyAccount": "Koppel mijn account nu",
     "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Synchronisatie",
     "SyncMedia": "Synchroniseer media",
@@ -743,6 +745,6 @@
     "SyncJobItemStatusFailed": "Mislukt",
     "SyncJobItemStatusRemovedFromDevice": "Van apparaat verwijderd",
     "SyncJobItemStatusCancelled": "Geannuleerd",
-    "LabelProfile": "Profile:",
+    "LabelProfile": "profiel:",
     "LabelBitrateMbps": "Bitrate (Mbps):"
 }
