--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -35,6 +35,8 @@
     "HeaderConfirmation": "Confirma\u00e7\u00e3o",
     "MessageKeyUpdated": "Obrigado. Sua chave de colaborador foi atualizada.",
     "MessageKeyRemoved": "Obrigado. Sua chave de colaborador foi removida.",
+    "TitleLiveTV": "TV ao Vivo",
+    "TitleSync": "Sinc",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
     "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
     "MessageLinkYourSupporterKey": "Associe sua chave de colaborador com at\u00e9 {0} membros do Emby Connect para desfrutar acesso gr\u00e1tis \u00e0s seguintes apps:",
@@ -93,7 +95,6 @@
     "HeaderWelcomeToProjectWebClient": "Bem vindo ao Emby Web Client",
     "ButtonTakeTheTour": "Fa\u00e7a o tour",
     "HeaderWelcomeBack": "Bem-vindo novamente!",
-    "TitleSync": "Sinc",
     "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Fa\u00e7a o tour para ver as novidades",
     "MessageNoSyncJobsFound": "Nenhuma tarefa de sincroniza\u00e7\u00e3o encontrada. Crie uma tarefa de sincroniza\u00e7\u00e3o usando os bot\u00f5es Sincroniza\u00e7\u00e3o encontrados na interface web.",
@@ -119,6 +120,7 @@
     "MessagePlaybackErrorNotAllowed": "Voc\u00ea n\u00e3o est\u00e1 autorizado a reproduzir este conte\u00fado. Por favor, entre em contato com o administrador do sistema para mais detalhes.",
     "MessagePlaybackErrorNoCompatibleStream": "N\u00e3o existem streams compat\u00edveis dispon\u00edveis. Por favor, tente novamente mais tarde.",
     "MessagePlaybackErrorRateLimitExceeded": "Seu limite da taxa de reprodu\u00e7\u00e3o foi excedido. Por favor, entre em contato com o administrador do sistema para mais detalhes.",
+    "MessagePlaybackErrorPlaceHolder": "O conte\u00fado escolhido n\u00e3o \u00e9 reproduz\u00edvel neste dispositivo.",
     "HeaderSelectAudio": "Selecione \u00c1udio",
     "HeaderSelectSubtitles": "Selecione Legendas",
     "ButtonMarkForRemoval": "Remover do dispositivo",
@@ -448,8 +450,8 @@
     "OptionHomeVideos": "V\u00eddeos caseiros",
     "OptionBooks": "Livros",
     "OptionAdultVideos": "V\u00eddeos adultos",
-    "ButtonUp": "Para cima",
-    "ButtonDown": "Para baixo",
+    "ButtonUp": "Subir",
+    "ButtonDown": "Descer",
     "LabelMetadataReaders": "Leitores de metadados:",
     "LabelMetadataReadersHelp": "Classifique por ordem de prioridade suas fontes de metadados locais preferidas. O primeiro arquivo encontrado ser\u00e1 lido.",
     "LabelMetadataDownloaders": "Downloaders de metadados:",
@@ -493,7 +495,7 @@
     "HeaderMediaLocations": "Localiza\u00e7\u00f5es de M\u00eddia",
     "LabelContentTypeValue": "Tipo de conte\u00fado: {0}",
     "LabelPathSubstitutionHelp": "Opcional: Substitui\u00e7\u00e3o de caminho pode mapear caminhos do servidor para compartilhamentos de rede de forma a que os clientes possam acessar para reprodu\u00e7\u00e3o direta.",
-    "FolderTypeUnset": "Indefinida (conte\u00fado misto)",
+    "FolderTypeUnset": "Indefinido (conte\u00fado misto)",
     "FolderTypeMovies": "Filmes",
     "FolderTypeMusic": "M\u00fasica",
     "FolderTypeAdultVideos": "V\u00eddeos adultos",
@@ -670,29 +672,29 @@
     "WebClientTourUserPreferences4": "Configure imagens de fundo, m\u00fasicas-tema e reprodutores externos",
     "WebClientTourMobile1": "O cliente web funciona perfeitamente em smartphones e tablets...",
     "WebClientTourMobile2": "E controle facilmente outros dispositivos e apps do Emby",
-    "WebClientTourMySync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assisti-la off-line.",
+    "WebClientTourMySync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assistir off-line.",
     "MessageEnjoyYourStay": "Divirta-se",
     "DashboardTourDashboard": "O painel do servidor permite monitorar seu servidor e seus usu\u00e1rios. Voc\u00ea sempre poder\u00e1 saber quem est\u00e1 fazendo o qu\u00ea e onde est\u00e3o.",
     "DashboardTourHelp": "A ajuda dentro da app fornece bot\u00f5es para abrir p\u00e1ginas wiki relacionadas ao conte\u00fado na tela.",
     "DashboardTourUsers": "Crie facilmente contas de usu\u00e1rios para seus amigos e fam\u00edlia, cada um com sua permiss\u00e3o, acesso \u00e0 biblioteca, controle parental e mais.",
     "DashboardTourCinemaMode": "O modo cinema traz a experi\u00eancia do cinema para sua sala, permitindo reproduzir trailers e intros personalizadas antes da fun\u00e7\u00e3o principal.",
-    "DashboardTourChapters": "Ative a gera\u00e7\u00e3o de imagem do cap\u00edtulo para seus v\u00eddeos para ter uma apresenta\u00e7\u00e3o mais prazeirosa.",
+    "DashboardTourChapters": "Ative a gera\u00e7\u00e3o de imagem dos cap\u00edtulos de seus v\u00eddeos para ter uma apresenta\u00e7\u00e3o mais prazeirosa.",
     "DashboardTourSubtitles": "Fa\u00e7a download de legendas para os seus v\u00eddeos, em qualquer idioma, automaticamente.",
     "DashboardTourPlugins": "Instale plugins, como os canais de v\u00eddeo de internet, tv ao vivo, rastreadores de metadados e mais.",
     "DashboardTourNotifications": "Envie, automaticamente, notifica\u00e7\u00f5es de eventos do servidor para seus dispositivos m\u00f3veis, email e mais.",
     "DashboardTourScheduledTasks": "Gerencie facilmente opera\u00e7\u00f5es longas com tarefas agendadas. Decida quando executar e com que frequ\u00eancia.",
     "DashboardTourMobile": "O painel do Servidor Emby funciona perfeitamente em smartphones e tablets. Gerencie seu servidor da palma de sua m\u00e3o a qualquer hora, em qualquer lugar.",
-    "DashboardTourSync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assisti-la off-line.",
+    "DashboardTourSync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assistir off-line.",
     "MessageRefreshQueued": "Atualiza\u00e7\u00e3o iniciada",
     "TabDevices": "Dispositivos",
     "TabExtras": "Extras",
     "DeviceLastUsedByUserName": "Utilizado por \u00faltimo por {0}",
     "HeaderDeleteDevice": "Excluir Dispositivo",
-    "DeleteDeviceConfirmation": "Tem certeza de que deseja excluir este dispositivo? Ele reaparecer\u00e1 a pr\u00f3xima vez que um usu\u00e1rio utiliz\u00e1-lo.",
+    "DeleteDeviceConfirmation": "Deseja realmente excluir este dispositivo? Ele reaparecer\u00e1 da pr\u00f3xima vez que um usu\u00e1rio utiliz\u00e1-lo.",
     "LabelEnableCameraUploadFor": "Habilitar envio atrav\u00e9s de c\u00e2mera para:",
-    "HeaderSelectUploadPath": "Selecione o caminho para carga",
+    "HeaderSelectUploadPath": "Selecionar o Caminho para Upload",
     "LabelEnableCameraUploadForHelp": "Os uploads ocorrer\u00e3o automaticamente em segundo plano quando entrar no Emby.",
-    "ErrorMessageStartHourGreaterThanEnd": "O tempo final deve ser maior que o tempo inicial.",
+    "ErrorMessageStartHourGreaterThanEnd": "A hora final deve ser maior que a hora inicial.",
     "ButtonLibraryAccess": "Acesso \u00e0 biblioteca",
     "ButtonParentalControl": "Controle Parental",
     "HeaderInvitationSent": "Convite Enviado",
