--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -7,7 +7,7 @@
     "LabelApiDocumentation": "Documentazione Api",
     "LabelDeveloperResources": "Risorse programmatori",
     "LabelBrowseLibrary": "Esplora la libreria",
-    "LabelConfigureServer": "Configure Emby",
+    "LabelConfigureServer": "Configura Emby",
     "LabelOpenLibraryViewer": "Apri visualizzatore libreria",
     "LabelRestartServer": "Riavvia Server",
     "LabelShowLogWindow": "Mostra Finestra log",
@@ -15,7 +15,7 @@
     "LabelFinish": "Finito",
     "LabelNext": "Prossimo",
     "LabelYoureDone": "Hai Finito!",
-    "WelcomeToProject": "Welcome to Emby!",
+    "WelcomeToProject": "Benvenuto in Emby",
     "ThisWizardWillGuideYou": "Questa procedura ti guider\u00e0 durante il processo di installazione. Per cominciare, per favore seleziona la tua lingua preferita",
     "TellUsAboutYourself": "Parlaci di te",
     "ButtonQuickStartGuide": "Guida rapida",
@@ -34,7 +34,7 @@
     "LabelChapterImageExtractionForMoviesHelp": "L'estrazione delle immagini dai capitoli permetter\u00e0 ai client di avere un men\u00f9 grafico per la selezione delle scene. Il processo potrebbe essere lento, con uso intensivo della CPU e potrebbe richiedere diversi gigabyte di spazio. Viene avviato durante la notte, ad ogni modo \u00e8 configurabile nella sezione azioni pianificate. Non \u00e8 raccomandato l'avvio di questo processo durante le ore di massimo utilizzo.",
     "LabelEnableAutomaticPortMapping": "Abilita mappatura delle porte automatiche",
     "LabelEnableAutomaticPortMappingHelp": "UPnP consente la configurazione automatica del router per l'accesso remoto facile. Questo potrebbe non funzionare con alcuni modelli di router.",
-    "HeaderTermsOfService": "Emby Terms of Service",
+    "HeaderTermsOfService": "Emby termini di servizio",
     "MessagePleaseAcceptTermsOfService": "Per favore accetta i termini di servizio e l'informativa sulla privacy prima di continuare.",
     "OptionIAcceptTermsOfService": "Accetto i termini di servizio",
     "ButtonPrivacyPolicy": "Informativa sulla privacy",
@@ -47,7 +47,7 @@
     "LabelDashboardSourcePathHelp": "se si sta eseguendo il server da una sorgente, specifica il percorso dell'interfaccia. Tutti i file per i client saranno presi da questo percorso",
     "ButtonConvertMedia": "Converti media",
     "ButtonOrganize": "Organizza",
-    "LinkedToEmbyConnect": "Linked to Emby Connect",
+    "LinkedToEmbyConnect": "Collegato a Emby Connect",
     "HeaderSupporterBenefits": "Supporter Benefits",
     "HeaderAddUser": "Add User",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
@@ -1384,5 +1384,7 @@
     "HeaderUpcomingPrograms": "Upcoming Programs",
     "ButtonMoreItems": "Pi\u00f9...",
     "LabelShowLibraryTileNames": "Show library tile names",
-    "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page"
+    "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
+    "OptionEnableTranscodingThrottle": "Enable throttling",
+    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
 }
