--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -701,8 +701,8 @@
     "OptionAllUsers": "Todos os usu\u00e1rios",
     "OptionAdminUsers": "Administradores",
     "OptionCustomUsers": "Personalizado",
-    "ButtonArrowUp": "Para cima",
-    "ButtonArrowDown": "Para baixo",
+    "ButtonArrowUp": "Subir",
+    "ButtonArrowDown": "Descer",
     "ButtonArrowLeft": "Esquerda",
     "ButtonArrowRight": "Direita",
     "ButtonBack": "Voltar",
@@ -1298,16 +1298,16 @@
     "LabelDateAddedBehaviorHelp": "Se um valor de metadata estiver presente, ele sempre ser\u00e1 utilizado antes destas op\u00e7\u00f5es.",
     "LabelNumberTrailerToPlay": "N\u00famero de trailers a serem apresentados:",
     "TitleDevices": "Dispositivos",
-    "TabCameraUpload": "Carga atrav\u00e9s de c\u00e2mera",
+    "TabCameraUpload": "Upload da C\u00e2mera",
     "TabDevices": "Dispositivos",
     "HeaderCameraUploadHelp": "Faz o upload autom\u00e1tico de fotos e v\u00eddeos tiradas por seus dispositivos m\u00f3veis para o Emby.",
-    "MessageNoDevicesSupportCameraUpload": "Atualmente voc\u00ea n\u00e3o tem nenhum dispositivo que suporte carga atrav\u00e9s da c\u00e2mera.",
-    "LabelCameraUploadPath": "Caminho para carga atrav\u00e9s da c\u00e2mera:",
+    "MessageNoDevicesSupportCameraUpload": "Atualmente voc\u00ea n\u00e3o tem nenhum dispositivo que suporte upload da c\u00e2mera.",
+    "LabelCameraUploadPath": "Caminho para upload da c\u00e2mera:",
     "LabelCameraUploadPathHelp": "Selecione um caminho personalizado para upload, se desejar. Se n\u00e3o definir, a pasta padr\u00e3o ser\u00e1 usada. Se usar um caminho personalizado, ser\u00e1 necess\u00e1rio adicionar na \u00e1rea de ajustes da biblioteca.",
     "LabelCreateCameraUploadSubfolder": "Criar uma subpasta para cada dispositivo",
     "LabelCreateCameraUploadSubfolderHelp": "Pastas espec\u00edficas podem ser atribu\u00eddas a um dispositivo clicando-as na p\u00e1gina de Dispositivos.",
     "LabelCustomDeviceDisplayName": "Nome para exibi\u00e7\u00e3o:",
-    "LabelCustomDeviceDisplayNameHelp": "Forne\u00e7a um nome para exibi\u00e7\u00e3o ou deixe vazio para usar o nome informado pelo dispositivo.",
+    "LabelCustomDeviceDisplayNameHelp": "Forne\u00e7a um nome para exibi\u00e7\u00e3o ou deixe em branco para usar o nome informado pelo dispositivo.",
     "HeaderInviteUser": "Convidar usu\u00e1rio",
     "LabelConnectGuestUserNameHelp": "Este \u00e9 o nome de usu\u00e1rio que seu amigo usa para entrar no website do Emby, ou seu endere\u00e7o de email.",
     "HeaderInviteUserHelp": "Compartilhar sua m\u00eddia com amigos nunca foi t\u00e3o f\u00e1cil com o Emby Connect.",
@@ -1384,5 +1384,7 @@
     "HeaderUpcomingPrograms": "Programas Por Estrear",
     "ButtonMoreItems": "Mais...",
     "LabelShowLibraryTileNames": "Mostrar os nomes das tiles da biblioteca",
-    "LabelShowLibraryTileNamesHelp": "Determina se os t\u00edtulos ser\u00e3o exibidos embaixo das tiles da biblioteca na p\u00e1gina in\u00edcio"
+    "LabelShowLibraryTileNamesHelp": "Determina se os t\u00edtulos ser\u00e3o exibidos embaixo das tiles da biblioteca na p\u00e1gina in\u00edcio",
+    "OptionEnableTranscodingThrottle": "Ativar controlador de fluxo",
+    "OptionEnableTranscodingThrottleHelp": "O controlador de fluxo ajustar\u00e1 automaticamente a velocidade de transcodifica\u00e7\u00e3o para minimizar o uso da cpu no servidor durante a reprodu\u00e7\u00e3o"
 }
