--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
@@ -7,7 +7,7 @@
     "LabelApiDocumentation": "Api Documentation",
     "LabelDeveloperResources": "Developer Resources",
     "LabelBrowseLibrary": "Navegar pela Biblioteca",
-    "LabelConfigureServer": "Configure Emby",
+    "LabelConfigureServer": "Configurar o Emby",
     "LabelOpenLibraryViewer": "Abrir Visualizador da Biblioteca",
     "LabelRestartServer": "Reiniciar Servidor",
     "LabelShowLogWindow": "Mostrar Janela de Log",
@@ -15,16 +15,16 @@
     "LabelFinish": "Terminar",
     "LabelNext": "Seguinte",
     "LabelYoureDone": "Concluiu!",
-    "WelcomeToProject": "Welcome to Emby!",
+    "WelcomeToProject": "Bem-vindo ao Emby!",
     "ThisWizardWillGuideYou": "Este assistente ir\u00e1 ajud\u00e1-lo durante o processo de configura\u00e7\u00e3o. Para come\u00e7ar, selecione o idioma.",
     "TellUsAboutYourself": "Fale-nos sobre si",
     "ButtonQuickStartGuide": "Quick start guide",
     "LabelYourFirstName": "O seu primeiro nome:",
     "MoreUsersCanBeAddedLater": "\u00c9 poss\u00edvel adicionar utilizadores mais tarde no Painel Principal",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "UserProfilesIntro": "O Emby inclui suporte nativo de perfis de utilizadores, permitindo que cada utilizador tenha as suas configura\u00e7\u00f5es de visualiza\u00e7\u00e3o, estado da reprodu\u00e7\u00e3o e controlos parentais.",
     "LabelWindowsService": "Servi\u00e7o do Windows",
     "AWindowsServiceHasBeenInstalled": "Foi instalado um Servi\u00e7o do Windows.",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro1": "O Servidor Emby \u00e9 normalmente executado como uma aplica\u00e7\u00e3o de ambiente de trabalho com um \u00edcone na barra de tarefas, mas se o preferir executar como um servi\u00e7o em segundo plano, pode ser iniciado no painel de controlo de servi\u00e7os do windows.",
     "WindowsServiceIntro2": "Por favor tome aten\u00e7\u00e3o que se estiver a usar o servi\u00e7o, este n\u00e3o pode estar a correr ao mesmo tempo que o \u00edcone na bandeja. Por isso, ter\u00e1 de sair da aplca\u00e7\u00e3o da bandeja para poder correr o servi\u00e7o. Note, ainda, que o servi\u00e7o necessita de privil\u00e9gios administrativos via Painel de Controlo. De momento, n\u00e3o \u00e9 poss\u00edvel utilizar a fun\u00e7\u00e3o de auto-actualiza\u00e7\u00e3o ao mesmo tempo que est\u00e1 em utiliza\u00e7\u00e3o o servi\u00e7o, por isso, novas vers\u00f5es necessitam de interac\u00e7\u00e3o manual.",
     "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
     "LabelConfigureSettings": "Configura\u00e7\u00f5es",
@@ -34,7 +34,7 @@
     "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Activar mapeamento autom\u00e1tico de portas",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permite configurar automaticamente o router, para um acesso remoto mais facilitado. Pode n\u00e3o suportar todos os modelos de routers.",
-    "HeaderTermsOfService": "Emby Terms of Service",
+    "HeaderTermsOfService": "Termos de Servi\u00e7o do Emby",
     "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
     "OptionIAcceptTermsOfService": "I accept the terms of service",
     "ButtonPrivacyPolicy": "Privacy policy",
@@ -613,7 +613,7 @@
     "OptionMove": "Mover",
     "LabelTransferMethodHelp": "Copiar ou mover ficheiros da pasta observada",
     "HeaderLatestNews": "\u00daltimas Not\u00edcias",
-    "HeaderHelpImproveProject": "Help Improve Emby",
+    "HeaderHelpImproveProject": "Ajude a Melhorar o Emby",
     "HeaderRunningTasks": "Tarefas em Execu\u00e7\u00e3o",
     "HeaderActiveDevices": "Dispositivos Ativos",
     "HeaderPendingInstallations": "Instala\u00e7\u00f5es Pendentes",
@@ -624,8 +624,8 @@
     "ButtonUpdateNow": "Atualizar Agora",
     "TabHosting": "Hosting",
     "PleaseUpdateManually": "Por favor encerre o servidor e atualize manualmente.",
-    "NewServerVersionAvailable": "A new version of Emby Server is available!",
-    "ServerUpToDate": "Emby Server is up to date",
+    "NewServerVersionAvailable": "Uma nova vers\u00e3o do Servidor Emby est\u00e1 dispon\u00edvel!",
+    "ServerUpToDate": "O Servidor Emby est\u00e1 atualizado",
     "LabelComponentsUpdated": "Os componentes seguintes foram instalados ou atualizados:",
     "MessagePleaseRestartServerToFinishUpdating": "Por favor reinicie o servidor para terminar a aplica\u00e7\u00e3o das atualiza\u00e7\u00f5es.",
     "LabelDownMixAudioScale": "Escala do aumento de \u00e1udio ao fazer downmix:",
@@ -1252,7 +1252,7 @@
     "LabelConnectGuestUserName": "Their Emby username or email address:",
     "LabelConnectUserName": "Emby username\/email:",
     "LabelConnectUserNameHelp": "Connect this user to an Emby account to enable easy sign-in access from any Emby app without having to know the server ip address.",
-    "ButtonLearnMoreAboutEmbyConnect": "Learn more about Emby Connect",
+    "ButtonLearnMoreAboutEmbyConnect": "Saiba mais sobre o Emby Connect",
     "LabelExternalPlayers": "External players:",
     "LabelExternalPlayersHelp": "Display buttons to play content in external players. This is only available on devices that support url schemes, generally Android and iOS. With external players there is generally no support for remote control or resuming.",
     "HeaderSubtitleProfile": "Subtitle Profile",
@@ -1384,5 +1384,7 @@
     "HeaderUpcomingPrograms": "Upcoming Programs",
     "ButtonMoreItems": "More...",
     "LabelShowLibraryTileNames": "Show library tile names",
-    "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page"
+    "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
+    "OptionEnableTranscodingThrottle": "Enable throttling",
+    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
 }
